--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 # Bank Configuration
 BANK_CODE=mybank
-BANK_NAME=My Awesome Bank
+BANK_NAME=Hyperboreya
 BANK_DESCRIPTION=Custom bank for hackathon
 PUBLIC_URL=http://localhost:8080
 
 # Team Credentials (получите у организаторов)
-TEAM_CLIENT_ID=team200
-TEAM_CLIENT_SECRET=your_secret_key_here
+TEAM_CLIENT_ID=team087
+TEAM_CLIENT_SECRET=fNU5OfxyX2cVm9ylfvmq3iEtpiwbavnD
 
 # Security
 SECRET_KEY=change-this-to-random-string-in-production
